@@ -11,6 +11,7 @@ BUG FIXES
 - #3315992: ClosureAsLastMethodParameter - false positive, when method call surrounded by parentheses.
 - #3315946: Cmdline runner does not respect -includes and -excludes.  (Fixed by René Scheibe)
 - #3314576: UnnecessaryPublicModifierRule: MissingPropertyException.  (Fixed by René Scheibe)
+- #3322395: JUnitTestMethodWithoutAssert - Added support for parameters in the @Test annotation. E.g.: @Test(expected = IllegalArgumentException) and @Test(timeout = 1000).   (Fixed by René Scheibe)
 
 
 Changes in version 0.14 (June 2011)
